--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
   <title>Title</title>
 </head>
 <body>
-  Hello World
-  <script src="src/app.js"></script>
+<header class="header">
+  <h1>Twitter</h1>
+  <nav>
+    <ul>
+      <li>登录</li>
+      <li>注册</li>
+    </ul>
+  </nav>
+</header>
+
+<main class="container">
+  <form>
+    <h2>查看世界上正在发生的事情</h2>
+    <input type="text" placeholder="电话、邮件地址或用户名">
+    <input type="password" placeholder="密码">
+    <p>忘记密码？</p>
+    <ul>
+      <li>登录</li>
+      <li>或</li>
+      <li>注册</li>
+    </ul>
+  </form>
+</main>
+<script src="src/app.js"></script>
 </body>
 </html>
